--- a/src/group_44_ucsb_grad.Rmd
+++ b/src/group_44_ucsb_grad.Rmd
@@ -17,6 +17,8 @@ ucsb_grad <- read.csv(here("data", "ucsb_grad_data.csv"))
 
 ```{r}
 ggplot(data = ucsb_grad, aes(x = year_abbr, y = domestic_enrollment, fill = ethnicity)) +
-  geom_col()
+  geom_col(position = "fill")+
+  labs(x = "Enrollment Year", 
+       y = "Proportion of Domestic Enrollment")
 ```
 
