--- a/src/group_44_ucsb_grad.Rmd
+++ b/src/group_44_ucsb_grad.Rmd
@@ -19,6 +19,8 @@ ucsb_grad <- read.csv(here("data", "ucsb_grad_data.csv"))
 ggplot(data = ucsb_grad, aes(x = year_abbr, y = domestic_enrollment, fill = ethnicity)) +
   geom_col(position = "fill")+
   labs(x = "Enrollment Year", 
-       y = "Proportion of Domestic Enrollment")
+       y = "Proportion of Domestic Enrollment",
+       title = "UCSB Enrollment by Ethnicity, 2008-2019")+
+  theme_minimal()
 ```
 
